# AlgorithmEngineering_SS23

./: .gitignore  README.md
CVRP/: CMakeLists.txt
CVRP/includes/math/: MathUtil.cpp  MathUtil.h
CVRP/main/: greedy_cvrp.cpp
CVRP/source/: FileLoader.cpp  FileLoader.h  SolData.cpp  SolData.h  VrpData.cpp  VrpData.h  solution_checker.cpp
CVRP/source/greedy/: GreedySolver.cpp  GreedySolver.h
CVRP/source/solution_checker/: LocationNode.cpp  LocationNode.h  LocationsContainer.cpp  LocationsContainer.h  Route.cpp  Route.h  SolData.cpp  SolData.h  VrpData.cpp  VrpData.h
CVRP/source/utils/: LocationNode.cpp  LocationNode.h  LocationsContainer.cpp  LocationsContainer.h  Problem.cpp  Problem.h  Route.cpp  Route.h
CVRP_cpp/main/: greedy_cvrp.cpp  solution_checker.cpp
CVRP_py/: README.md  average_distance_heuristic.py  greedy_heuristic.py  instance_generator.py  randomized_horse_race.py  solution_checker.py  test_solution_quality.py
CVRP_py/analysis/: boxplots.ipynb  plotting.py
CVRP_py/classes/: AverageDistanceSolver.py  GreedySolver.py  HorseRaceData.py  InstanceGenerator.py  LocationNode.py  LocationsContainer.py  Problem.py  Route.py  Solution.py  Solver.py  TableData.py
CVRP_py/helpers/: latex_utils.py  load_write.py  maths.py  read_sol.py  read_vrp.py
FloatingPointFilter/: PointOrientation.py  helper.py  main.py  maths.py
FloatingPointFilter/classes/: Coordinates.py  Index.py  InstanceGenerator.py  Measure.py  Timer.py
R/: hypothesis_test.r  hypothesis_test_greedy_distance.r
analysis/R-Scripts/: hypothesis_test_greedy_distance.r  regression.r
cpp_CVRP/: README.md
data/custom/: Custom-n200-q180_229.vrp  Custom-n200-q180_395.vrp  Custom-n200-q180_441.vrp  Custom-n200-q180_586.vrp  Custom-n200-q180_597.vrp  Custom-n200-q180_63.vrp  Custom-n200-q180_722.vrp  Custom-n200-q181_31.vrp  Custom-n200-q181_365.vrp  Custom-n200-q181_47.vrp  Custom-n200-q181_531.vrp  Custom-n200-q181_9.vrp  Custom-n200-q182_254.vrp  Custom-n200-q182_7.vrp  Custom-n200-q183_850.vrp  Custom-n200-q183_996.vrp  Custom-n200-q184_115.vrp  Custom-n200-q184_225.vrp  Custom-n200-q184_758.vrp  Custom-n200-q184_915.vrp  Custom-n200-q185_158.vrp  Custom-n200-q185_300.vrp  Custom-n200-q185_327.vrp  Custom-n200-q185_831.vrp  Custom-n200-q186_516.vrp  (+975 more)
py_CVRP/: README.md  average_distance_heuristic.py  greedy_heuristic.py  main.py  solution_checker.py  third_heuristic.py
(+11071 files in other folders)
